test/ui/program-entry-not-a-function-but-a-module.stderr
error[E050]: the component ‘program-entry-not-a-function-but-a-module’ does not contain a ‘main’ function in its root module
  ┌─ ${TEST_FOLDER}/program-entry-not-a-function-but-a-module.lushui:1:1
  │
1 │   ;;; TEST compiler-args --component-type=executable
  · ╔═╝
3 │ ║ module main of
  │ ╚══════════════╝

error: aborting due to previous error

