test/ui/program-entry-not-a-function-but-a-module.lushui
;;; TEST compiler-args --component-type=executable

module main of
